2007-02-15  Jim Lynch <jim@jam.sessionsnet.org>
	Make the output of DbFail() more prettyer.

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	it didn't, so now I'm moving the message inside the quotation marks
	in the message of the form (exception FOO, "...")

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* observed that data added to tcl result doesn't all get through,
	so I'm now seeing if removing the newline chars from the message 
	appended to the tcl result lets more of the message through.

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* in each function that has one, change the name of all local 
	NsPgConn* variables to nspgConn, to make things a little easier
	to read.
	* when driver throws an error message from a call to PQexec,
	add the result status returned from the pg server. For more
	info, see: 
	http://www.postgresql.org/docs/8.1/static/libpq-exec.html
	and scroll down to the documentation for the PQresultStatus() func.

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* The variable PGLIB was meant to hold the path to the libs; the
	build failed when this variable got pg_config --libs. Worked again
	when using pg_config --libdir.

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* add the ability to specify the fully qualified location
	of the pg_config executable by adding PG_CONFIG=/path/to/it;
	now you can say "POSTGRES=PG_CONFIG PG_CONFIG=/some/where/pg_config"
	and in so doing locate a particular installation of postgres, perhaps
	among many on the same machine, or perhaps not locatable due to 
	not being found along the execution path.

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* correct a situation where the POSTGRES variable was prematurely
	overwritten. It specifies either where to find a postgres install, 
	or else how to find it. The author of the overwriting code wanted
	to try a pair of standard locations for postgres; as a result of
	my changes it makes those checks only if the POSTGRES variable